Hugo: update GitHub url

--- a/hugo.toml
+++ b/hugo.toml
@@ -40,7 +40,7 @@ paginate     = 10
 
     [[params.social]]
     name = "github"
-    url = "https://github.com/UserBulba"
+    url = "https://github.com/User-Piotr"
 
     [[params.social]]
     name = "email"
