Hugo: update pages baseurl

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseurl      = "https://userbulba.github.io/"
+baseurl      = "https://user-piotr.github.io/"
 title        = "Showcase"
 languageCode = "en-us"
 theme        = "hello-friend-ng"
